--- a/src/app/scheme/scheme.component.html
+++ b/src/app/scheme/scheme.component.html
@@ -1,199 +1,156 @@
-
 <div class="container-flex mt-5 mb-5">
     <div class="row">
         <div class="col-4">
-          <span class="h4">Show Scheme by district</span>
-          <form class="form">
-              <div class="form-row">
-                  <div class="form-group col-10">
-                      <select id="inputState" class="form-control" formControlName="role">
-                          <option selected>Jhapa</option>
-                          <option>Illam</option>
-                          <option>Illam</option>
-                          <option>Illam</option>
-                          <option>Illam</option>
-                      </select>
-                  </div>
-                  <div class="form-group col-2">
-                      <span class="btn btn-success" data-toggle="modal" data-target="#createuser">
-                          Show
-                      </span>
-                  </div>
-              </div>
-          </form>
-        </div>
-        <div class="col-4">
-          <span class="h4">Show Scheme by local-body</span>
-          <form class="form">
-              <div class="form-row">
-                  <div class="form-group col-10">
-                      <select id="inputState" class="form-control" formControlName="role">
-                          <option selected>Something Municipality</option>
-                          <option>Something VDC</option>
-                          <option>Anything Municipality</option>
-                          <option>This thing Municipality</option>
-                      </select>
-                  </div>
-                  <div class="form-group col-2">
-                      <span class="btn btn-success" data-toggle="modal" data-target="#createuser">
-                          Show
-                      </span>
-                  </div>
-              </div>
-          </form>
-        </div>
-
-        <div class="col-4">
             <span class="h4">Show Scheme by SO</span>
-            <form class="form">
+            <form class="form" [formGroup]="filterForm">
                 <div class="form-row">
                     <div class="form-group col-10">
-                        <select id="inputState" class="form-control" formControlName="role">
-                            <option selected>Something </option>
-                            <option>Something </option>
-                            <option>Anything </option>
-                            <option>This thing </option>
+                        <select id="inputState" class="form-control" formControlName="so">
+                            <option value='all'>All</option>
+                            <option *ngFor="let item of allSO" [value]="item['soId']">{{item['name']}}
+                            </option>
+
+                            
                         </select>
                     </div>
                     <div class="form-group col-2">
-                        <span class="btn btn-success" data-toggle="modal" data-target="#createuser">
+                        <span class="btn btn-success" (click)="getSchemeBySo(filterForm.value.so)">
                             Show
+                            <span class="spinner-border p-1" role="status" *ngIf="loading">
+                                <span class="sr-only">Loading...</span>
+                            </span>
                         </span>
                     </div>
                 </div>
             </form>
-          </div>
+        </div>
+    
     </div>
-  </div>
-  <div class="container-flex">
-      <span class="btn btn-success float-right" data-toggle="modal" data-target="#createuser">
-          <i class="fa fa-plus"> </i> Add Scheme
-      </span>
-      <table class="table table-striped">
-          <thead>
-              <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Code</th>
-                  <th scope="col">Name</th>
-                  <th scope="col">Address</th>
-                  <th scope="col">Phone</th>
-                  <th scope="col">Actions</th>
-  
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-                  <td>1</td>
-                  <td>NC-SO</td>
-                  <td>Somewhere khanepni sansthann</td>
-                  <td>Some Where, Under same-05, SKY,550</td>
-                  <td>9815004608,9862679609</td>
-                  <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
-                    <i class="fa fa-pencil">   </i> 
-                       
-                   </span>
-                   <span class="btn btn-danger rounded-circle rounded-circle-sm" (click)="deleteUser(user.userId,user.role)">
-                        <i class="fa fa-trash">   </i> 
-                       
-                   </span>
-              </tr>
-              <tr *ngFor="let user of users; let i = index;">
-                  <th scope="row"> {{ i+1 }} </th>
-                  <td> {{user.userName}}</td>
-                  <td> {{user.role}}</td>
-                  <td>{{user.active}}</td>
-                  <td>
-  
-                    <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
-                        <i class="fa fa-pencil">   </i> 
-                           
-                       </span>
-                       <span class="btn btn-danger rounded-circle rounded-circle-sm" (click)="deleteUser(user.userId,user.role)">
-                            <i class="fa fa-trash">   </i> 
-                           
-                       </span>
-  
-                  </td>
-              </tr>
-          </tbody>
-      </table>
-  
-  </div>
-  
-  
-  
-  <!-- Modal -->
-  <div class="modal fade" id="createuser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog modal-lg" role="document">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Create User</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                  </button>
-              </div>
-              <div class="modal-body">
-  
-  
-  
-  
-                  <form [formGroup]="userForm">
+</div>
+
+
+<div class="container-flex">
+    <span class="btn btn-success float-right" data-toggle="modal" data-target="#create">
+        <i class="fa fa-plus"> </i> Add Scheme
+    </span>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Code</th>
+                <th scope="col">Name</th>
+                <th scope="col">Name(NP)</th>
+                <th scope="col">Actions</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of allScheme; let i = index;">
+                <th scope="row"> {{ i+1 }} </th>
+                <td> {{item.schemeCode}}</td>
+                <td> {{item.name}}</td>
+                <td>{{item.nameNP}}</td>
+                <td>
+
+                    <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2"
+                     (click)="edit(i)" data-toggle="modal" data-target="#update">
+                        <i class="fa fa-pencil"> </i>
+
+                    </span>
+                    <span class="btn btn-danger rounded-circle rounded-circle-sm"
+                        (click)="delete(item.schemeId)">
+                        <i class="fa fa-trash"> </i>
+
+                    </span>
+
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+</div>
+
+
+
+<!-- Modal create -->
+<div class="modal fade" id="create" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Create Scheme</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="schemeForm">
                     <div class="form-row">
                         <div class="form-group col-md-5">
-                            <label for="inputEmail4">Scheme Name (in English)</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Scheme NAME"
-                                formControlName="userName">
+                            <label for="name">Scheme Name (in English)</label>
+                            <input type="text" class="form-control" id="name" placeholder="Scheme NAME"
+                                [formControlName]="formControlNames.name">
                         </div>
                         <div class="form-group col-md-5">
-                            <label for="inputEmail4">Scheme Name (in Nepali)</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Scheme NAME"
-                                formControlName="userName">
+                            <label for="nameNP">Scheme Name (in Nepali)</label>
+                            <input type="text" class="form-control" id="nameNP" placeholder="Scheme NAME"
+                                [formControlName]="formControlNames.nameNP">
                         </div>
                         <div class="form-group col-md-2">
-                            <label for="inputEmail4">Scheme Code</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Scheme CODE"
-                                formControlName="userName">
+                            <label for="code">Scheme Code</label>
+                            <input type="text" class="form-control" id="code" placeholder="Scheme CODE"
+                                [formControlName]="formControlNames.schemeCode">
                         </div>
                     </div>
 
-                      <div class="form-row">
-                         
-                        <div class="form-group col-md-4">
-                            <label for="inputState">District</label>
-                            <select id="inputState" class="form-control" formControlName="District">
-                                <option selected>User</option>
-                                <option>Admin</option>
-                            </select>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal"
+                    (click)="create(schemeForm.value)">Create</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal update -->
+<div class="modal fade" id="update" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Update Scheme</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="updateSchemeForm">
+                    <div class="form-row">
+                        <div class="form-group col-md-5">
+                            <label for="uname">Scheme Name (in English)</label>
+                            <input type="text" class="form-control" id="uname" placeholder="Scheme NAME"
+                                [formControlName]="formControlNames.name">
                         </div>
+                        <div class="form-group col-md-5">
+                            <label for="unameNP">Scheme Name (in Nepali)</label>
+                            <input type="text" class="form-control" id="unameNP" placeholder="Scheme NAME"
+                                [formControlName]="formControlNames.nameNP">
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label for="ucode">Scheme Code</label>
+                            <input type="text" class="form-control" id="ucode" placeholder="Scheme CODE"
+                                [formControlName]="formControlNames.schemeCode">
+                        </div>
+                    </div>
 
-                        <div class="form-group col-md-4">
-                            <label for="inputState">local-body</label>
-                            <select id="inputState" class="form-control" formControlName="localbody">
-                                <option selected>User</option>
-                                <option>Admin</option>
-                            </select>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label for="inputState">SO</label>
-                            <select id="inputState" class="form-control" formControlName="role">
-                                <option selected>User</option>
-                                <option>Admin</option>
-                            </select>
-                        </div>
-                      </div>
-                  </form>
-  
-  
-  
-  
-              </div>
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary" data-dismiss="modal"
-                      (click)="createUser(userForm.value)">Create</button>
-              </div>
-          </div>
-      </div>
-  </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal"
+                    (click)="doEdit(updateSchemeForm.value)">Update</button>
+            </div>
+        </div>
+    </div>
+</div>
